--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="ozerLang">
           <div><a class="rusLang" href="">Русский</a></div>
-          <div><a class="engLang" href="https://yurii-donnikov.github.io/resumeEnglish/">English</a></div>
+          <div><a class="engLang" href="https://yurii-donnikov.github.io/resume_eng/">English</a></div>
         </div>
       </div>
       <div id="sidebar">
