after houseVOP proj

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <a target="_blank" href="https://yurii-donnikov.github.io/BarbershopMain/"><img src="./images/work1.png" alt=""></a>
             <a target="_blank" href="https://yurii-donnikov.github.io/PhotoStudio/"><img src="./images/photoStudio.png" alt=""></a>
             <a target="_blank" href="https://yurii-donnikov.github.io/project_construct/"><img src="./images/project_construct.png" alt=""></a>
-            <a href=""><img src="./images/auto.jpg" alt=""></a>
+            <a target="_blank" href="https://yurii-donnikov.github.io/HouseVop_project/"><img src="./images/project_HouseVop.png" alt=""></a>            
             <a href=""><img src="./images/auto.jpg" alt=""></a>
             <a href=""><img src="./images/auto.jpg" alt=""></a>
             <a href=""><img src="./images/auto.jpg" alt=""></a>
