--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
           <div class="acc-body">
             <div>
               <img src="./images/icon-tel.png" alt="">
-              <p>+380(66)1647025</p>
+              <p><a href="tel:+380661647025">+380(66)1647025</a></p>
             </div>
             <div>
               <img src="./images/icon-mess.png" alt="">
-              <p>donnikov01@gmail.com</p>
+              <p><a href="mailto:donnikov01@gmail.com">donnikov01@gmail.com</a></p>
             </div>
             <div>
               <img src="./images/icon-map.png" alt="">
@@ -123,9 +123,10 @@
           <h2>ОПЫТ РАБОТЫ</h2>
           <div>
             <div class="divInEduc">
-              <p>2020 - &#8734;</p>
+              <p>2021 - &#8734;</p>
             </div>
-            <h3>Фриланс
+            <h3>Aweb systems
+              <p>Контент менеджер (верстальщик)</p>
             </h3>
           </div>
         </section>
