--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
           <div class="acc-body">
             <div>
               <img src="./images/icon-tel.png" alt="">
-              <p><a href="tel:+380661647025">+380(66)1647025</a></p>
+              <p><a style="color:#000" href="tel:+380661647025">+380(66)1647025</a></p>
             </div>
             <div>
               <img src="./images/icon-mess.png" alt="">
-              <p><a href="mailto:donnikov01@gmail.com">donnikov01@gmail.com</a></p>
+              <p><a style="color:#000" href="mailto:donnikov01@gmail.com">donnikov01@gmail.com</a></p>
             </div>
             <div>
               <img src="./images/icon-map.png" alt="">
@@ -126,7 +126,7 @@
               <p>2021 - &#8734;</p>
             </div>
             <h3>Aweb systems
-              <p>Контент менеджер (верстальщик)</p>
+              <p style="font-weight: 100;">Контент менеджер (верстальщик)</p>
             </h3>
           </div>
         </section>
