--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
                 ><img src="./images/photoStudio.png" alt=""
               /></a>
             </div>
-            <h3>+ React</h3>
-            <div>
+            <h3 style="display: none">+ React</h3>
+            <div style="display: none">
               <a
                 target="_blank"
                 href="https://github.com/yurii-donnikov/summary_Taxi_park"
