--- a/index.html
+++ b/index.html
@@ -225,6 +225,11 @@
                 href="https://github.com/yurii-donnikov/summary_users"
                 ><img src="./images/users.png" alt=""
               /></a>
+               <a
+                target="_blank"
+                href="https://github.com/yurii-donnikov/messenger"
+                ><img src="./images/taxi.png" alt=""
+              /></a>
             </div>
           </section>
         </div>
