--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
               <div>
                 <img src="./images/icon-mess.png" alt="" />
                 <p>
-                  <a style="color: #000" href="mailto:donnikov01@gmail.com"
-                    >donnikov01@gmail.com</a
+                  <a style="color: #000" href="mailto:donnikrvav@gmail.com"
+                    >donnikrvav@gmail.com</a
                   >
                 </p>
               </div>
