--- a/index.html
+++ b/index.html
@@ -47,6 +47,15 @@
                   >
                 </p>
               </div>
+              <!--<a href="https://telegram.me/gazellbuyer">Написать автору</a>-->
+              <div>
+                <img src="./images/telega.png" alt="" />
+                <p>
+                  <a style="color: #000" href="https://telegram.me/Donnykov"
+                    >@Donnykov</a
+                  >
+                </p>
+              </div>
               <div>
                 <img src="./images/icon-mess.png" alt="" />
                 <p>
@@ -94,9 +103,9 @@
           <section class="connect">
             <h2 class="acc-head">СОЦИАЛЬНЫЕ СЕТИ</h2>
             <div class="acc-body">
-              <a target="_blank" href="https://www.instagram.com/donnykov007/"
+              <a target="_blank" href="https://www.instagram.com/donnykov/"
                 ><img src="./images/icon-inst.png" alt="" />
-                <p>donnykov007</p>
+                <p>donnykov</p>
               </a>
               <a target="_blank" href="https://www.facebook.com/donnikrvav"
                 ><img src="./images/icon-fbk.png" alt="" />
@@ -144,7 +153,7 @@
             <h2>ОПЫТ РАБОТЫ</h2>
             <div>
               <div class="divInEduc">
-                <p>2021 - &#8734;</p>
+                <p>2021 - 2022</p>
               </div>
               <h3>
                 Aweb systems
@@ -215,20 +224,14 @@
             </div>
             <h3>+ React</h3>
             <div>
-              <a
-                target="_blank"
-                href="https://github.com/yurii-donnikov/summary_Taxi_park"
-                ><img src="./images/taxi.png" alt=""
+              <a target="_blank" href="https://eating-menu.vercel.app/dish"
+                ><img src="./images/dish.png" alt=""
               /></a>
-              <a
-                target="_blank"
-                href="https://github.com/yurii-donnikov/summary_users"
+              <a target="_blank" href="https://summary-users.vercel.app/users"
                 ><img src="./images/users.png" alt=""
               /></a>
-               <a
-                target="_blank"
-                href="https://github.com/yurii-donnikov/messenger"
-                ><img src="./images/taxi.png" alt=""
+              <a target="_blank" href="https://messenger-coral.vercel.app/login"
+                ><img src="./images/massanger.png" alt=""
               /></a>
             </div>
           </section>
